updated CHESS theme to hide the tag <<part>> in the diagrams

--- a/plugins/org.polarsys.chess.core/theme/chess.css
+++ b/plugins/org.polarsys.chess.core/theme/chess.css
@@ -28,6 +28,10 @@ bodyCutLength: 5;
 indicateParameters: true;
 }
 
+ /* remove the tag <<part>> on blocks */
+Property {
+    displayTags: false;
+}
 
 /*Hide the labels sourceMultiplicity and targetMultiplicity of the association*/
 Association > Label:sourceMultiplicity {
