updated css theme style to visualize  the multiplicity of ports also in IBD
Change-Id: I833678a1f4621501a41cb1c8cb393d25ca326f50

--- a/plugins/org.polarsys.chess.core/theme/chess.css
+++ b/plugins/org.polarsys.chess.core/theme/chess.css
@@ -3,6 +3,11 @@ Port {
 	maskLabel: direction name type multiplicity;
 }
 
+/*Add multiplicity to the Port label in InternalBlockDiagram*/ 
+InternalBlockDiagram Port > Label{
+	maskLabel: direction name type multiplicity;
+}
+
 /*Hide stereotype labels in IBD */
 InternalBlockDiagram Label[type=StereotypeLabel]{
 	visible: false;
